Profile Picture Setting
+ Only Setting of Profile Picture
- No storing of profile picture with user

--- a/templates/register.html
+++ b/templates/register.html
@@ -21,17 +21,13 @@
             {{ form.confirm_password() }}
 
             <br>
-            <!-- <div class="radio-group"> -->
-                <label><input type="radio" name="users" id="student" value="Student" required>Student</label>
-                <label><input type="radio" name="users" id="teacher" value="Teacher" required>Teacher</label>
-            <!-- </div> -->
+            <div class="radio-group">
+                <label for="student-radio"><input type="radio" name="users" id="student" value="Student" required>Student</label>
+                <label for="teacher-radio"><input type="radio" name="users" id="teacher" value="Teacher" required>Teacher</label>
+            </div>
             <br>
                 <button type="submit">Sign Up</button>
-            
-            
         </form>
-
-        
     </div>
 
     
