--- a/static/style3.css
+++ b/static/style3.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 body {
 	background-image: url("../static/images/bg5.jpg");
 	display: flex;
@@ -10,13 +8,11 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
 	margin: -20px 0 50px;
-	overflow:hidden;
 }
 
 h1 {
 	font-weight: bold;
 	margin: 0;
-	text-align:center;
 	color: black
 }
 
@@ -36,7 +32,7 @@ span {
 }
 
 a {
-	color: #252525;
+	color: #333;
 	font-size: 14px;
 	text-decoration: none;
 	margin: 15px 0;
@@ -64,11 +60,9 @@ button:focus {
 }
 
 button.ghost {
-	background-color: rgb(0, 0, 0);
+	background-color: black;
 	color: #ffc300;
 }
-
-
 
 form {
 	background-color: #FFFFFF;
@@ -121,8 +115,7 @@ input {
 .sign-up-container {
 	left: 0;
 	width: 50%;
-	opacity: 100;
-	z-index: 1;
+	z-index: 2;
 }
 
 .container.right-panel-active .sign-up-container {
@@ -185,7 +178,7 @@ input {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	padding: 0 10px;
+	padding: 0 0 0 40px;
 	text-align: center;
 	top: 0;
 	height: 100%;
@@ -203,7 +196,7 @@ input {
 }
 
 .overlay-right {
-	right: -3;
+	right: 0;
 	transform: translateX(0);
 }
 
@@ -251,36 +244,26 @@ footer a {
     text-decoration: none;
 }
 
-.radio-group {
+.wrapper-class input[type="radio"] {
+	width: 15px;
+  }
+  
+  .wrapper-class label {
+	display: inline;
+	margin-left: 5px;
+	}
 
-	display: flex;
+	input[type='checkbox'] {
+		float: left;
+		width: 20px;
+	  }
+	  input[type='checkbox'] + label {
+		display: block;
+		width: 30px;
+	  }
+
+.file-upload {
+display: flex;
+margin-right: 10px;
 }
-
-.radio-group label {
-	margin-right: 10px;
-}
-
-
-label[for="input_file"] {
-
-	display:block;
-	width: 200px;
-	border: 1px solid #ffc300;
-	background-color: rgb(0, 0, 0);
-	color: #ffc300;
-	font-size: 12px;
-	padding:12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-	margin:10px auto;
-	border-radius: 20px;
-	cursor:pointer;
-}
-
-input[type="file"] {
-
-	display:none;
-}
-
 
