--- a/templates/teacherprofile.html
+++ b/templates/teacherprofile.html
@@ -6,7 +6,7 @@
 <img src="../static/images/logo.png" width="25%" height="15%" alt="logo" >
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="/teacherprofile" method="POST">
+		<form action="/teacherprofile" method="POST" autocomplete=off>
             {{form.hidden_tag() }}
 			<h1>Teacher Profile</h1><br>
 			<!-- <input type="text" placeholder="Username" />
@@ -27,17 +27,33 @@
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-right">
-				<img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="40%" height="35%" style = "border:5px solid #000000" >
+				<img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="40%" height="35%" style = "border:5px 	solid #000000" id="profile_pic" >
 					<br>
-                                        <b>UPLOAD NEW PHOTO</b>
-                                        <p><input type="file" style = " background-color :#ffc300" ></p>
-					<button class="ghost" id="signIn">RESET </button><br>
-<span style="font-size: 8px;">Allowed JPG, GIF or PNG.Max size of 800K </span>
+						<!-- <b>UPLOAD NEW PHOTO</b> -->
+
+						<div class="file-upload">
+							<input type="file" style = "background-color :#ffc300" id="input_file" accept="image/jpeg,image/png, image/jpg">
+							<label for="input_file">Update Image</label><br><br>
+						</div>
+					<button class="ghost" id="reset">RESET </button><br>
+					<span style="font-size: 8px;">Allowed JPG, GIF or PNG.Max size of 800K </span>
                                     
 			</div>
 		</div>
 	</div>
 </div>
+<script>
+	let profilePic = document.getElementById("profile_pic");
+	let inputFile = document.getElementById("input_file");
+
+	inputFile.onchange = function() {
+		profilePic.src = URL.createObjectURL(inputFile.files[0]);
+	}
+
+	document.getElementById("reset").onclick = function() {
+		profilePic.src = "https://bootdey.com/img/Content/avatar/avatar1.png";
+	}
+</script>
 </body>
 </html>
 
