--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,116 +13,158 @@
 
 <body>
 
-<header>
-    <nav class="bg-white border-gray-200 dark:bg-gray-900">
-        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Kyubee Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Kyubee</span>
-            </a>
-            <button data-collapse-toggle="navbar-default" type="button"
+    <header>
+        <nav class="bg-black border-gray-200 dark:bg-gray-900">
+            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+                <!-- <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">
+                <img src="../../static/images/logo3.png" class="h-24" alt="Kyubee Logo" />
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
+            </a> -->
+
+                <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
+                    <img src="../../static/images/logo3.png" class="h-16 flex-shrink-0" alt="Kyubee Logo" />
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
+                </a>
+                <button data-collapse-toggle="navbar-default" type="button"
                     class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                     aria-controls="navbar-default" aria-expanded="false">
-                <span class="sr-only">Open main menu</span>
-                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                     viewBox="0 0 17 14">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M1 1h15M1 7h15M1 13h15" />
-                </svg>
-            </button>
-            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-                <ul
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 17 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 1h15M1 7h15M1 13h15" />
+                    </svg>
+                </button>
+                <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                    <ul
                         class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
-                           aria-current="page">Home</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
-                    </li>
-                    <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
-                    </li>
-                    <li>
-                        <a href="{{url_for('logout')}}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+                        <li>
+                            <a href="#"
+                                class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                                aria-current="page">Home</a>
+                        </li>
 
-</header>
-<div class="alert">
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
-{% for category, message in messages %}
-    <!-- <div class="alert"> -->
-    {{ message }}
-    <!-- </div> -->
-{% endfor %}
-{% endif %}
-{% endwith %}
-</div>
-<main class="h-[60vh] w-full bg-blue-50">
+                        <li>
+                            <a href="#"
+                                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+                        </li>
+                        <li>
+                            <a href="{{url_for('account',user_id=user_id,user_type=user_type)}}"
+                                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Account</a>
+                        </li>
 
-    <div class="flex flex-col justify-start items-center pt-40 gap-5">
-
-        <h1 class="text-6xl font-black">Welcome to Kyubee</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et velit ratione voluptates, aliquid eius explicabo nihil, est accusamus magni libero ex, at vitae. Accusantium.</p>
-    </div>
-
-</main>
-
-<section class="w-2/3 mx-auto py-20">
-    <div class="">
-        <h1 class="text-center font-black text-4xl">Upload Section</h1>
-        <form action="" class="my-20" enctype="multipart/form-data">
-
-            <label class="block mb-2 text-md font-medium text-gray-900" for="file_input">Upload file</label>
-            <input name="file" class="block w-full text-md text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50" aria-describedby="file_input_help" id="file_input" type="file">
-            <p class="mt-1 text-md text-gray-500" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>
-
-            <h1 class="text-center text-3xl font-black">OR</h1>
-            <div id="questions-input-div">
-                <div class="mb-6">
-                    <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900">Enter your question here</label>
-                    <input name="question" type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <li>
+                            <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-start" class="w-10 h-10 rounded-full cursor-pointer" src="/docs/images/people/profile-picture-5.jpg" alt="User dropdown">
+                            <div id="userDropdown"
+                                class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                                <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+                                    <div>{{ logged_user.EMAIL}}</div>
+                                </div>
+                                <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
+                                    aria-labelledby="avatarButton">
+                                    <li>
+                                        <a href="#"
+                                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"
+                                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"
+                                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
+                                    </li>
+                                </ul>
+                                <div class="py-1">
+                                    <a href="{{url_for('logout')}}"
+                                        class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
+                                        out</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
-            <div class="flex justify-between">
-                <button type="button" id="questionBtn" class="px-2 py-1 rounded bg-orange-500 text-white text-sm">Add Question</button>
-                <button type="Submit" id="questionBtn" class="px-2 py-1 rounded bg-green-500 text-white text-sm">Submit</button>
-            </div>
-        </form>
+
+
+
+
+
+        </nav>
+    </header>
+    <div class="alert">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
     </div>
 
-</section>
 
-<script>
-    const questionDiv = document.getElementById("questions-input-div")
+    <main class="h-[60vh] w-full bg-blue-50">
+
+        <div class="flex flex-col justify-start items-center pt-40 gap-5">
+
+            <h1 class="text-6xl font-black">Welcome to Kyubee</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et velit ratione voluptates, aliquid eius
+                explicabo nihil, est accusamus magni libero ex, at vitae. Accusantium.</p>
+        </div>
+
+    </main>
+
+    <section class="w-2/3 mx-auto py-20">
+        <div class="">
+            <h1 class="text-center font-black text-4xl">Upload Section</h1>
+            <form action="" class="my-20" enctype="multipart/form-data">
+
+                <label class="block mb-2 text-md font-medium text-gray-900" for="file_input">Upload file</label>
+                <input name="file"
+                    class="block w-full text-md text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50"
+                    aria-describedby="file_input_help" id="file_input" type="file">
+                <p class="mt-1 text-md text-gray-500" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>
+
+                <h1 class="text-center text-3xl font-black">OR</h1>
+                <div id="questions-input-div">
+                    <div class="mb-6">
+                        <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900">Enter your
+                            question here</label>
+                        <input name="question" type="text" id="default-input"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    </div>
+                </div>
+
+                <div class="flex justify-between">
+                    <button type="button" id="questionBtn"
+                        class="px-2 py-1 rounded bg-orange-500 text-white text-sm">Add Question</button>
+                    <button type="Submit" id="questionBtn"
+                        class="px-2 py-1 rounded bg-green-500 text-white text-sm">Submit</button>
+                </div>
+            </form>
+        </div>
+
+    </section>
+
+    <script>
+        const questionDiv = document.getElementById("questions-input-div")
 
 
-const addQuestionBtn = document.getElementById("questionBtn")
+        const addQuestionBtn = document.getElementById("questionBtn")
 
-addQuestionBtn.addEventListener("click", e => {
-    console.log("here")
-    questionDiv.insertAdjacentHTML("beforeend", `
+        addQuestionBtn.addEventListener("click", e => {
+            console.log("here")
+            questionDiv.insertAdjacentHTML("beforeend", `
     <div class="mb-6">
         <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900">Enter your question here</label>
         <input name="question" type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
     </div>
     `)
-})
-</script>
+        })
+    </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 </body>
