--- a/templates/teacherdashboard.html
+++ b/templates/teacherdashboard.html
@@ -49,7 +49,7 @@
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
                     </li>
                     <li>
-                        <a href="{{url_for('student_account')}}"
+                        <a href="{{url_for('teacher_account')}}"
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Account</a>
                     </li>
 
@@ -128,7 +128,7 @@
                    aria-describedby="file_input_help" id="file_input" type="file">
             <p class="mt-1 text-md text-gray-500" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>
 
-            <embed src= r"D:\CodingFiles\kyubee_project\BCA332.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+
 
             <h1 class="text-center text-3xl font-black">OR</h1>
             <div id="questions-input-div">
