--- a/static/style.css
+++ b/static/style.css
@@ -2,228 +2,227 @@
 @tailwind components;
 @tailwind utilities;
 body {
-	background-image: url("../static/images/bg5.jpg");
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
-	margin: -20px 0 50px;
-	overflow:hidden;
+    background-image: url("../static/images/bg5.jpg");
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    margin: -20px 0 50px;
+    overflow: hidden;
 }
 
 h1 {
-	font-weight: bold;
-	margin: 0;
-	text-align:center;
-	color: black
+    font-weight: bold;
+    margin: 0;
+    text-align: center;
+    color: black
 }
 
 p {
-	color: black;
-	font-size: 14px;
+    color: black;
+    font-size: 14px;
     text-align: center;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 10px 0 20px;
-    margin-left : 60px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 10px 0 20px;
+    margin-left: 60px;
 }
 
 span {
-	font-size: 12px;
+    font-size: 12px;
 }
 
 a {
-	color: #252525;
-	font-size: 14px;
-	text-decoration: none;
-	margin: 15px 0;
+    color: #252525;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
 }
 
 button {
-	border-radius: 20px;
-	border: 1px solid #ffc300;
-	background-color: #ffc300;
-	color: black;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
+    border-radius: 20px;
+    border: 1px solid #ffc300;
+    background-color: #ffc300;
+    color: black;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
 }
 
 button:active {
-	transform: scale(0.95);
+    transform: scale(0.95);
 }
 
 button:focus {
-	outline: none;
+    outline: none;
 }
 
 button.ghost {
-	background-color: rgb(0, 0, 0);
-	color: #ffc300;
+    background-color: rgb(0, 0, 0);
+    color: #ffc300;
 }
-
 
 
 form {
-	background-color: #FFFFFF;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
 }
 
 input {
-	background-color: #eee;
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
+    background-color: #eee;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
 }
 
 .container {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
 }
 
 .form-container {
-	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
 }
 
 .sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 2;
+    left: 0;
+    width: 50%;
+    z-index: 2;
 }
 
 .container.right-panel-active .sign-in-container {
-	transform: translateX(100%);
+    transform: translateX(100%);
 }
 
 .sign-up-container {
-	left: 0;
-	width: 50%;
-	opacity: 100;
-	z-index: 1;
+    left: 0;
+    width: 50%;
+    opacity: 100;
+    z-index: 1;
 }
 
 .container.right-panel-active .sign-up-container {
-	transform: translateX(100%);
-	opacity: 1;
-	z-index: 5;
-	animation: show 0.6s;
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
 }
 
 @keyframes show {
-	0%, 49.99% {
-		opacity: 0;
-		z-index: 1;
-	}
-	
-	50%, 100% {
-		opacity: 1;
-		z-index: 5;
-	}
+    0%, 49.99% {
+        opacity: 0;
+        z-index: 1;
+    }
+
+    50%, 100% {
+        opacity: 1;
+        z-index: 5;
+    }
 }
 
 .overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-	z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
 }
 
-.container.right-panel-active .overlay-container{
-	transform: translateX(-100%);
+.container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
 }
 
 .overlay {
-	background: #ffc300;
-	background: -webkit-linear-gradient(to right, #ffc300, #ffc300);
-	background: linear-gradient(to right, #ffc300, #ffc300);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: black;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+    background: #ffc300;
+    background: -webkit-linear-gradient(to right, #ffc300, #ffc300);
+    background: linear-gradient(to right, #ffc300, #ffc300);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: black;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
 }
 
 .container.right-panel-active .overlay {
-  	transform: translateX(50%);
+    transform: translateX(50%);
 }
 
 .overlay-panel {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 10px;
-	text-align: center;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 10px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
 }
 
 .overlay-left {
-	transform: translateX(-20%);
+    transform: translateX(-20%);
 }
 
 .container.right-panel-active .overlay-left {
-	transform: translateX(0);
+    transform: translateX(0);
 }
 
 .overlay-right {
-	right: 20;
-	transform: translateX(0);
+    right: 0;
+    transform: translateX(0);
 }
 
 .container.right-panel-active .overlay-right {
-	transform: translateX(20%);
+    transform: translateX(20%);
 }
 
 .social-container {
-	margin: 20px 0;
+    margin: 20px 0;
 }
 
 .social-container a {
-	border: 1px solid #DDDDDD;
-	border-radius: 50%;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
+    border: 1px solid #DDDDDD;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
 }
 
 footer {
@@ -253,56 +252,56 @@ footer a {
 
 .radio-group {
 
-	display: flex;
+    display: flex;
 }
 
 .radio-group label {
-	margin-right: 10px;
+    margin-right: 10px;
 }
 
 
 label[for="input_file"] {
 
-	display:block;
-	width: 200px;
-	border: 1px solid #ffc300;
-	background-color: rgb(0, 0, 0);
-	color: #ffc300;
-	font-size: 12px;
-	padding:12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-	margin:10px auto;
-	border-radius: 20px;
-	cursor:pointer;
+    display: block;
+    width: 200px;
+    border: 1px solid #ffc300;
+    background-color: rgb(0, 0, 0);
+    color: #ffc300;
+    font-size: 12px;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+    margin: 10px auto;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 input[type="file"] {
 
-	display:none;
+    display: none;
 }
 
 
 .flash-messages {
-	list-style: none;
-	padding: 0;
-	margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .flash-message {
-	margin-bottom: 10px;
-	padding: 10px;
-	border: 1px solid;
-	border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid;
+    border-radius: 5px;
 }
 
 .success {
-	border-color: #4CAF50; /* Green border for success messages */
-	background-color: #E7FEE7; /* Light green background for success messages */
+    border-color: #4CAF50; /* Green border for success messages */
+    background-color: #E7FEE7; /* Light green background for success messages */
 }
 
 .error {
-	border-color: #D32F2F; /* Red border for error messages */
-	background-color: #FEE7E7; /* Light red background for error messages */
+    border-color: #D32F2F; /* Red border for error messages */
+    background-color: #FEE7E7; /* Light red background for error messages */
 }
