--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -46,97 +46,50 @@
 				</section>
 
 			<!-- Main -->
-				<section id="main" class="container">
+            <section id="main" class="container">
 
-					<section class="box special">
-						<header class="major">
-							<h2>Introducing the question bank website
-							<br />
-							for generating papers with just one click</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
-						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-					</section>
+                <section class="box special">
+                    <header class="major">
+                        <h2>Introducing the question bank website
+                            <br />
+                            for generating papers with just one click</h2>
+                        <p>Generate question papers and practice well for your exams <br />
+                            with our one click paper generation button .</p>
+                    </header>
+                    <span class="image featured"><img src="images/something.png" alt="" /></span>
+                </section>
 
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-					</section>
+                <section class="box special features">
+                    <div class="features-row">
+                        <section>
+                            <span class="icon solid major fa-bolt accent2"></span>
+                            <h3>Generate Question Papers</h3>
+                            <p>Generate practice papers of how much you have studied and check your progress </p>
+                        </section>
+                        <section>
+                            <span class="icon solid major fa-chart-area accent3"></span>
+                            <h3>Get Notes</h3>
+                            <p>Get notes from teachers and use it to prepare well</p>
+                        </section>
+                    </div>
+                    <div class="features-row">
+                        <section>
+                            <span class="icon solid major fa-cloud accent4"></span>
+                            <h3>Rate Notes</h3>
+                            <p>Rate the notes provided by the teacher and review them so that notes others can  get help before accessing the notes</p>
+                        </section>
+                        <section>
+                            <span class="icon solid major fa-lock accent5"></span>
+                            <h3>Profile View </h3>
+                            <p>Use profile View to see all the notes uploaded by a teacher and her rating.</p>
+                        </section>
+                    </div>
+                </section>
+                <ul class="copyright">
+                    <p align="center"> &copy; Untitled. All rights reserved.<a href="kyubee.com">KYUBEE</a></p>
+                </ul>
 
-					<div class="row">
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-					</div>
-
-				</section>
-
-			<!-- CTA -->
-				<section id="cta">
-
-
-			<br>	
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="kyubee.com">KYUBEE</a></li>
-					</ul>
-				</footer>
-
-		</div>
+        </div>
 
 		<!-- Scripts -->
 			<script src="../static/assets/js/jquery.min.js"></script>
