--- a/templates/studentprofile.html
+++ b/templates/studentprofile.html
@@ -1,54 +1,60 @@
-<html>
+<html lang="">
 <head>
-<link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-<img src="../static/images/logo.png" width="25%" height="15%" alt="logo" >
+<img src="../static/images/logo.png" width="25%" height="15%" alt="logo">
 <div class="container" id="container">
-	<div class="form-container sign-up-container">
-		<form action="{{url_for('student_profile',login_uuid=login_uuid)}}" method="POST" autocomplete=off>
-            {{form.hidden_tag() }}
-			<h1>Student Profile</h1><br>
+    <div class="form-container sign-up-container">
+        <form action="{{ url_for('student_profile',login_uuid=login_uuid) }}" method="POST" autocomplete=off>
+            {{ form.hidden_tag() }}
+            <h1>Student Profile</h1><br>
 
             {{ form.username }}
             {{ form.first_name }}
             {{ form.last_name }}
             {{ form.department }}
             {{ form.phone_number }}
-			<br>
-			<button type="submit">Save</button>
-		</form>
-	</div>
-	<div class="overlay-container">
-		<div class="overlay">
-			<div class="overlay-panel overlay-right">
-				<img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="40%" height="35%" style = "border:5px 	solid #000000" id="profile_pic" >
-					<br>
-						<!-- <b>UPLOAD NEW PHOTO</b> -->
+            <br>
+            <button type="submit">Save</button>
 
-						<div class="file-upload">
-							<input type="file" style = "background-color :#ffc300" id="input_file" accept="image/jpeg,image/png, image/jpg">
-							<label for="input_file">Update Image</label><br><br>
-						</div>
-					<button class="ghost" id="reset">RESET </button><br>
-					<span style="font-size: 8px;">Allowed JPG, GIF or PNG.Max size of 800K </span>             
-			</div>
-		</div>
-	</div>
+    </div>
+    <div class="overlay-container">
+        <div class="overlay">
+            <div class="overlay-panel overlay-right">
+                <img src="../static/man-user-circle-icon.png" width="45%" height="35%"
+                     id="profile_pic">
+                <br>
+                <!-- <b>UPLOAD NEW PHOTO</b> -->
+
+                <div class="file-upload">
+                    <input type="file" style="background-color :#ffc300" id="input_file" accept="image/*">
+                    <label for="input_file">Update Image</label><br><br>
+                </div>
+                <button class="ghost" id="reset">RESET</button>
+                <br>
+                <span style="font-size: 8px;">Allowed JPG, GIF or PNG.Max size of 800K </span>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
-	let profilePic = document.getElementById("profile_pic");
-	let inputFile = document.getElementById("input_file");
+    let profilePic = document.getElementById("profile_pic");
+    let inputFile = document.getElementById("input_file");
 
-	inputFile.onchange = function() {
-		profilePic.src = URL.createObjectURL(inputFile.files[0]);
-	}
+    inputFile.onchange = function() {
+        profilePic.src = URL.createObjectURL(inputFile.files[0]);
+    }
 
-	document.getElementById("reset").onclick = function() {
-		profilePic.src = "https://bootdey.com/img/Content/avatar/avatar1.png";
-	}
+    document.getElementById("reset").onclick = function() {
+        profilePic.src = "../static/man-user-circle-icon.png";
+
+}
+
+
+
 </script>
 </body>
-</html>
+	</html>
 
