Small UI Update

--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -38,7 +38,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2><img src="../../static/logo.png" width="25%" height="15%" alt="logo" ></h2>
+					<h2><img src="../../static/images/logo.png" width="25%" height="15%" alt="logo" ></h2>
 					<ul class="actions special">
 						<li><a href="{{ url_for('register')}}" class="button primary">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
@@ -56,7 +56,7 @@
                         <p>Generate question papers and practice well for your exams <br />
                             with our one click paper generation button .</p>
                     </header>
-                    <span class="image featured"><img src="images/something.png" alt="" /></span>
+                    <span class="image featured"><img src="../../static/images/something.png" alt="" /></span>
                 </section>
 
                 <section class="box special features">
@@ -86,7 +86,7 @@
                     </div>
                 </section>
                 <ul class="copyright">
-                    <p align="center"> &copy; Untitled. All rights reserved.<a href="kyubee.com">KYUBEE</a></p>
+                    <p align="center"> &copy; Untitled. All rights reserved.<a href="kyubee.com">Kyubee</a></p>
                 </ul>
 
         </div>
