--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Contact - Alpha by HTML5 UP</title>
+		<title>Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="../../static/assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="homepage.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="homepage.html">KYUBEE</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href={{ url_for('homepage')}}>Home</a></li>
