--- a/templates/home/elements.html
+++ b/templates/home/elements.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html">KYUBEE</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href={{ url_for('homepage')}}>Home</a></li>
