--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@ body {
     background-image: url("../static/images/bg5.jpg");
     display: flex;
     justify-content: center;
+    background-size:cover;
     align-items: center;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
