Added Question Paper Page

--- a/templates/teacher/teacherdashboard.html
+++ b/templates/teacher/teacherdashboard.html
@@ -112,7 +112,8 @@
 
 <main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat" >
     <div class="flex flex-col justify-start items-center pt-40 gap-5">
-        <h1 class="text-7xl font-medium text-white mt-36">WELCOME TO KYUBEE {{current_user.}}</h1>
+        <h1 class="text-7xl font-medium text-white mt-22">WELCOME {{current_user.name}}</h1>
+<!--        <h1 class="text-7xl font-medium text-white mt-12"></h1>-->
     </div>
 
 
