--- a/templates/teacher/teacherprofilepage.html
+++ b/templates/teacher/teacherprofilepage.html
@@ -22,7 +22,7 @@
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a> -->
 
-            <a href="" class="flex">
+            <a href="{{ url_for('teacher_dashboard') }}" class="flex">
                 <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a>
