--- a/templates/teacher/teacheruploadsection.html
+++ b/templates/teacher/teacheruploadsection.html
@@ -40,17 +40,17 @@
                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
                            aria-current="page">Home</a>
                     </li>
-
                     <li>
                         <a href="{{ url_for('generate_paper') }}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Generate Paper</a>
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Generate
+                            Paper</a>
                     </li>
 
                     <li>
                         <a href="{{ url_for('upload_paper') }}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload Papers</a>
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload
+                            Notes</a>
                     </li>
-
 
                     <li>
                         <a href="{{url_for('teacher_account')}}"
@@ -96,22 +96,19 @@
 <main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat">
 
     <div class="flex flex-col justify-start items-center pt-40 gap-20">
-        <h1 class="text-7xl font-medium text-white mt-32">Upload Questions</h1>
+        <h1 class="text-7xl font-medium text-white mt-32">Upload Notes</h1>
 
-<!--        <form>-->
-            <button id="scrollButton"
-                    class="text-white end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-2xl px-12 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                Click Here
-            </button>
+        <!--        <form>-->
+        <button id="scrollButton"
+                class="text-white end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-2xl px-12 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Click Here
+        </button>
 
 
-
-<!--        </form>-->
+        <!--        </form>-->
     </div>
 
-
 </main>
-
 <section id="section2" class="w-2/3 mx-auto py-20">
 
     <div class="flex justify-center">
@@ -189,5 +186,6 @@
     </div>
 
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 </body>
 </html>
