--- a/templates/questionpaperupload.html
+++ b/templates/questionpaperupload.html
@@ -147,11 +147,16 @@
     </form>
     <div class="flex justify-between">
         <form method="POST" enctype="multipart/form-data" class="mb-4">
-            <textarea name="inputBox" rows="25" cols="100" style="resize: both; margin-right:50px" placeholder="Enter your questions here...">{{ extracted_text }}</textarea>
+            <textarea name="inputBox" rows="27" cols="100" style="resize: both; margin-right:50px" placeholder="Enter your questions here...">{{ extracted_text }}</textarea>
             <br>
             <button id="remove-all" type="submit"
                     class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 Separate Questions
+            </button>
+
+            <button type="submit"
+                    class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 ml-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Submit
             </button>
         </form>
         <div>
