--- a/templates/teacher/generatepaper.html
+++ b/templates/teacher/generatepaper.html
@@ -5,12 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="./main.css">
+    <!-- <link rel="stylesheet" href="./main.css"> -->
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 <body class="bg-cover bg-center bg-no-repeat" style="background-image: url('../../static/images/pexels-jakub-novacek-924824.jpg');">
+
+
+<!--<header>-->
+<!--    <nav class="bg-black border-gray-200 dark:bg-gray-900">-->
+<!--        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">-->
+<!--            &lt;!&ndash; <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">-->
+<!--                <img src="../../static/images/logo3.png" class="h-24" alt="Kyubee Logo" />-->
+<!--                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>-->
+<!--            </a> &ndash;&gt;-->
+
+<!--            <a href="" class="flex">-->
+<!--                <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />-->
+<!--                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>-->
+<!--            </a>-->
+<!--            <button data-collapse-toggle="navbar-default" type="button"-->
+<!--                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"-->
+<!--                    aria-controls="navbar-default" aria-expanded="false">-->
+<!--                <span class="sr-only">Open main menu</span>-->
+<!--                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"-->
+<!--                     viewBox="0 0 17 14">-->
+<!--                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"-->
+<!--                          d="M1 1h15M1 7h15M1 13h15" />-->
+<!--                </svg>-->
+<!--            </button>-->
+<!--            <div class="hidden w-full md:block md:w-auto mt-3" id="navbar-default">-->
+<!--                <ul-->
+<!--                        class="font-medium flex flex-col p-4 md:p-0 mt-3 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">-->
+<!--                    <li>-->
+<!--                        <a href="{{url_for('teacher_dashboard') }}"-->
+<!--                           class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"-->
+<!--                           aria-current="page">Home</a>-->
+<!--                    </li>-->
+
+<!--                    <li>-->
+<!--                        <a href="{{ url_for('generate_paper') }}"-->
+<!--                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Generate Paper</a>-->
+<!--                    </li>-->
+
+<!--                    <li>-->
+<!--                        <a href="{{ url_for('upload_paper') }}"-->
+<!--                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload Papers</a>-->
+<!--                    </li>-->
+
+<!--                    <li>-->
+<!--                        <a href="{{url_for('teacher_account')}}"-->
+<!--                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Account</a>-->
+<!--                    </li>-->
+
+<!--                    <li>-->
+<!--                        <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown"-->
+<!--                             data-dropdown-placement="bottom-start" class="w-9 h-9 rounded-full cursor-pointer"-->
+<!--                             src="{{ url_for('profile_picture') }}" alt="User dropdown">-->
+<!--                        <div id="userDropdown"-->
+<!--                             class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">-->
+<!--                            <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">-->
+<!--                                <div>{{ current_user.EMAIL }}</div>-->
+<!--                            </div>-->
+<!--                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"-->
+<!--                                aria-labelledby="avatarButton">-->
+<!--                                <li>-->
+<!--                                    <a href="#"-->
+<!--                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>-->
+<!--                                </li>-->
+<!--                                <li>-->
+<!--                                    <a href="#"-->
+<!--                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>-->
+<!--                                </li>-->
+<!--                                <li>-->
+<!--                                    <a href="#"-->
+<!--                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>-->
+<!--                                </li>-->
+<!--                            </ul>-->
+<!--                            <div class="py-1">-->
+<!--                                <a href="{{url_for('logout')}}"-->
+<!--                                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign-->
+<!--                                    out</a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </nav>-->
+<!--</header>-->
 
 
 <header>
@@ -170,5 +254,6 @@
     </div>
 
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 </body>
 </html>
