Fixed questions adding to database

--- a/templates/teacher/questionpaperupload.html
+++ b/templates/teacher/questionpaperupload.html
@@ -147,15 +147,21 @@
         <form method="POST" enctype="multipart/form-data" class="mb-4">
             <textarea name="inputBox" rows="27" cols="100" style="color: #dfd4d4; resize: both; margin-right:50px" placeholder="Enter your questions here...">{{ extracted_text }}</textarea>
             <br>
-            <button type="submit"
+            <button
                     class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 Separate Questions
             </button>
 
-            <button type="submit" name="submit-questions"
-                    class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 ml-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                Submit
-            </button>
+<!--            <button type="submit" name="submit-questions" id="submit-question"-->
+<!--                    class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 ml-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">-->
+<!--                Submit-->
+<!--            </button>-->
+
+
+            <input type="submit" id="submit-question" name="submit-question"
+                    class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium   rounded-lg text-sm px-4 py-3 ml-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+
+
         </form>
         <div>
             {% for question in questions_list %}
@@ -174,6 +180,28 @@
         </div>
     </div>
 </main>
+
+
+
+
+
+<!--<script>-->
+<!--    document.getElementById("submit-question").addEventListener("click", function(event) {-->
+<!--        let questions = [];-->
+<!--        let inputBox = document.querySelector("textarea[name='inputBox']");-->
+<!--        let lines = inputBox.value.split("\n");-->
+
+<!--        for (let line of lines) {-->
+<!--            if (line.trim() !== "") {-->
+<!--                questions.push(line.trim());-->
+<!--            }-->
+<!--        }-->
+
+<!--        let questionsInput = document.getElementById("questions");-->
+<!--        questionsInput.value = JSON.stringify(questions);-->
+<!--    });-->
+<!--</script>-->
+
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
