--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -17,7 +17,7 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Layouts</a>
 								<ul>
-									<li><a href="{{ url_for('generic') }}">Generic</a></li>
+									<li><a href="{{ url_for('generic') }}">About Us</a></li>
 									<li><a href="{{ url_for('contact') }}">Contact</a></li>
 									<li><a href="{{ url_for('elements') }}">Elements</a></li>
 									<li>
@@ -40,7 +40,7 @@
 				<section id="banner">
 					<h2><img src="../../static/images/logo.png" width="25%" height="15%" alt="logo" ></h2>
 					<ul class="actions special">
-						<li><a href="{{ url_for('register')}}" class="button primary">Sign Up</a></li>
+						<li ><a href="{{ url_for('register')}}" class="button primary">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</section>
@@ -50,13 +50,14 @@
 
                 <section class="box special">
                     <header class="major">
-                        <h2>Introducing the question bank website
+                        <h2 style="color:black;"><b> Introducing the question bank website </b>
                             <br />
-                            for generating papers with just one click</h2>
+							<b>for generating papers with just one click</b></h2>
                         <p>Generate question papers and practice well for your exams <br />
                             with our one click paper generation button .</p>
                     </header>
-                    <span class="image featured"><img src="../../static/images/something.png" alt="" /></span>
+<!--                    <span class="image featured"></span>-->
+					<img src="../../static/images/robot.png" alt="" />
                 </section>
 
                 <section class="box special features">
