--- a/templates/login_register/login.html
+++ b/templates/login_register/login.html
@@ -30,7 +30,7 @@
 				<button class="ghost" id="signIn">Sign In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
-				<h1 style="margin-left: 60px;">Hello, Friend!</h1>
+				<h1 style="margin-left: 60px;">Need an Account?</h1>
 				<p>Enter your personal details and start journey with us</p>
                 <a href="{{ url_for('register') }}"><button class="ghost" id="signUp" style="margin-left: 60px;color: #ffc300;" >Sign Up</button></a>
 
