--- a/templates/login_register/teacherregister.html
+++ b/templates/login_register/teacherregister.html
@@ -33,13 +33,13 @@
                 <br>
                 <!-- <b>UPLOAD NEW PHOTO</b> -->
 
-                <div class="file-upload">
-                    <input type="file" style="background-color :#ffc300" id="input_file" accept="image/*">
-                    <label for="input_file">Update Image</label><br><br>
-                </div>
-                <button class="ghost" id="reset">RESET</button>
-                <br>
-                <span style="font-size: 8px;">Allowed JPG, GIF or PNG.Max size of 800K </span>
+<!--                <div class="file-upload">-->
+<!--                    <input type="file" style="background-color :#ffc300" id="input_file" accept="image/*">-->
+<!--                    <label for="input_file">Update Image</label><br><br>-->
+<!--                </div>-->
+<!--                <button class="ghost" id="reset">RESET</button>-->
+<!--                <br>-->
+<!--                <span style="font-size: 8px;">Allowed JPG, GIF or PNG.Max size of 800K </span>-->
                                     
 			</div>
 		</div>
