--- a/templates/home/generic.html
+++ b/templates/home/generic.html
@@ -1,9 +1,4 @@
 
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Generic - Alpha by HTML5 UP</title>
@@ -23,21 +18,21 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Layouts</a>
 								<ul>
-									<li><a href={{ url_for('generic')}}>Generic</a></li>
-									<li><a href={{ url_for('contact')}}>Contact</a></li>
-									<li><a href={{ url_for('elements')}}>Elements</a></li>
+									<li><a href="{{ url_for('generic')}}">About Us</a></li>
+									<li><a href="{{ url_for('contact')}}">Contact</a></li>
+									<li><a href="{{ url_for('elements')}}">Elements</a></li>
 									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
+<!--										<a href="#">Submenu</a>-->
+<!--										<ul>-->
+<!--											<li><a href="#">Option One</a></li>-->
+<!--											<li><a href="#">Option Two</a></li>-->
+<!--											<li><a href="#">Option Three</a></li>-->
+<!--											<li><a href="#">Option Four</a></li>-->
+<!--										</ul>-->
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="{{ url_for('register')}}" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -45,40 +40,56 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Generic</h2>
-						<p>A generic page for every non-generic situation.</p>
+						<h2><b>About Us</b></h2>
+<!--						<p>What we do for .</p>-->
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-						<h3>This is a subheading</h3>
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+
+						<h3>About Kyubee</h3>
+						<p>ABSTRACT
+							Education Database Management System – Kyubee is a project that aligns with Sustainable Development Goal 4 - "Quality Education." The primary objective of this project is to facilitate the creation of a comprehensive questions and notes database for various academic courses. Educators can contribute by uploading question papers and notes related to specific topics within their courses which enable students to access and get customized question papers according to their needs.
+
+
+							</p>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
-								<h3>And now a subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<h3>Aim</h3>
+								<p>Kyubee aims to build a rich repository of questions that can be utilized for educational purposes. This project aims to contribute and enhance the educational experience by providing a unique approach to question paper creation.
+
+								<br>
+
+								Along with a repository for questions of various courses, this project also incorporates various notes for these courses by the faculty educators who provide materials for their specific courses.
+								</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
-								<h3>And another subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<h3>Objectives</h3>
+								<p>	- Establishing a Centralized Question Paper & Notes Repository <br>
+									- Foster Collaboration Between Students and Educators <br>
+									- Enable Efficient Question Curation and Retrieval <br>
+									- Integrate User Feedback <br>
+									- Support Question Paper Customization <br>
+									- Encourage Lifelong Learning <br>
+								</p>
 							</div>
 						</div>
 					</div>
+					<span class="image featured"><img src="../static/images/bulbedu.png" alt="" /></span>
 				</section>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+<!--				<footer id="footer">-->
+<!--&lt;!&ndash;					<ul class="icons">&ndash;&gt;-->
+<!--&lt;!&ndash;						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;					</ul>&ndash;&gt;-->
+<!--					<ul class="copyright">-->
+<!--						<li>&copy; Untitled. All rights reserved.</li>-->
+<!--					</ul>-->
+<!--				</footer>-->
 
 		</div>
 
