--- a/templates/teacher/questionpaperupload.html
+++ b/templates/teacher/questionpaperupload.html
@@ -50,7 +50,7 @@
     <nav class="bg-black border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
-            <a href="" class="flex">
+            <a href="{{ url_for('teacher_dashboard') }}" class="flex">
                 <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a>
