--- a/templates/student/studentprofilepage.html
+++ b/templates/student/studentprofilepage.html
@@ -17,13 +17,9 @@
 <header>
     <nav class="bg-black border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <!-- <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">
-                    <img src="../../static/images/logo3.png" class="h-24" alt="Kyubee Logo" />
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
-                </a> -->
 
-            <a href="{{url_for('student_dashboard')}}" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="../../static/images/logo3.png" class="h-16 flex-shrink-0" alt="Kyubee Logo" />
+            <a href="{{ url_for('student_dashboard') }}" class="flex">
+                <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button"
@@ -33,32 +29,48 @@
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                      viewBox="0 0 17 14">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M1 1h15M1 7h15M1 13h15"></path>
+                          d="M1 1h15M1 7h15M1 13h15"/>
                 </svg>
             </button>
-            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <div class="hidden w-full md:block md:w-auto mt-3" id="navbar-default">
                 <ul
-                        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                        class="font-medium flex flex-col p-4 md:p-0 mt-3 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                     <li>
-                        <a href="{{url_for('student_dashboard')}}"
+                        <a href="{{ url_for('student_dashboard') }}"
                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
                            aria-current="page">Home</a>
                     </li>
+
                     <li>
                         <a href="#"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Generate Paper</a>
                     </li>
+
                     <li>
                         <a href="#"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Search Notes</a>
                     </li>
+
                     <li>
-                        <a href="#"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Account</a>
+                        <a href="{{url_for('student_account')}}"
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Profile</a>
                     </li>
+
                     <li>
-                        <a href="{{url_for('logout')}}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Logout</a>
+                        <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown"
+                             data-dropdown-placement="bottom-start" class="w-9 h-9 rounded-full cursor-pointer"
+                             src="{{ url_for('profile_picture') }}" alt="User dropdown">
+                        <div id="userDropdown"
+                             class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                            <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+                                <div>{{ current_user.EMAIL }}</div>
+                            </div>
+                            <div class="py-1">
+                                <a href="{{url_for('logout')}}"
+                                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
+                                    out</a>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -77,8 +89,6 @@
                 </h1>
                 <form class="space-y-4 md:space-y-6" action="{{ url_for('student_account') }}" method="POST">
 
-{#                        <img src="{{ url_for('profile_picture',user_id=user_id) }}"#}
-{#                             class="object-scale-down h-48 w-96 ...">#}
                     <div class="flex justify-center items-center">
                         <img class="max-w-36 max-h-36" src="{{ url_for('profile_picture',user_id=user_id) }}" alt="Extra large avatar">
                     </div>
